--- a/RatingApp/RatingApp.WebUI/Views/Comment/Add.cshtml
+++ b/RatingApp/RatingApp.WebUI/Views/Comment/Add.cshtml
@@ -8,7 +8,7 @@
         <label class="caption-top">Add New Comment</label>
         <textarea name="Description" class="form-control"></textarea>
         <input name="Rating" class="form-control" type="range" min="0" max="5" />
-        <input name="ProductId" value="@productId" type="text" />
+        <input name="ProductId" value="@productId" type="hidden" />
         <input type="submit" value="Submit" class="btn btn-primary" />
     </div>
 </form>
